force-app/main/default/objects/Cadence__c/Cadence__c.object-meta.xml
<CustomObject>
    <label>Cadence</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cadence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cadences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>