force-app/main/default/objects/Cadence__c/fields/Cadence_Type__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Type__c</fullName>
    <label>Cadence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>401k</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>BenAdmin</fullName>
            </value>
            <value>
                <fullName>BusDev</fullName>
            </value>
            <value>
                <fullName>CSSR</fullName>
            </value>
            <value>
                <fullName>HNBF</fullName>
            </value>
            <value>
                <fullName>Inbound-Forms</fullName>
            </value>
            <value>
                <fullName>Inbound-Oasis</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>MMS SDR</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>NSS</fullName>
            </value>
            <value>
                <fullName>Oasis SDR</fullName>
            </value>
            <value>
                <fullName>Outbound-Oasis</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>SMB INB</fullName>
            </value>
            <value>
                <fullName>SMB New Business</fullName>
            </value>
            <value>
                <fullName>SMB SA</fullName>
            </value>
            <value>
                <fullName>TAA</fullName>
            </value>
            <value>
                <fullName>Virtual HNBF</fullName>
            </value>
            <value>
                <fullName>Virtual HRS</fullName>
            </value>
            <value>
                <fullName>Virtual SMB</fullName>
            </value>
            <value>
                <fullName>HRS-WS</fullName>
            </value>
            <value>
                <fullName>BPO</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>