force-app/main/default/objects/Cadence__c/fields/CadenceTypeGroup__c.field-meta.xml
<CustomField>
    <fullName>CadenceTypeGroup__c</fullName>
    <formula>CASE(Cadence_Type__c, &apos;Inbound-Forms&apos;, &apos;Sales-All Inbound&apos;, &apos;SMB INB&apos;, &apos;Sales-All Inbound&apos;, &apos;Inbound-Oasis&apos;, &apos;Sales-All Inbound&apos;, TEXT(Cadence_Type__c))</formula>
    <inlineHelpText>If multiple cadence types should be evaluated together (to make sure only one is active at a time), this is the group this cadence type is part of.</inlineHelpText>
    <label>Cadence Type Group</label>
    <type>Text</type>
</CustomField>