force-app/main/default/objects/Cadence__c/fields/CloseReasons__c.field-meta.xml
<CustomField>
    <fullName>CloseReasons__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A comma separated list of close reasons specific to this cadence</inlineHelpText>
    <label>Close Reasons</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>