force-app/main/default/objects/Cadence__c/fields/CPARotation__c.field-meta.xml
<CustomField>
    <fullName>CPARotation__c</fullName>
    <description>Changed from CPA Roation to Rotation based on clearslide req.</description>
    <inlineHelpText>If this is for an Accounting Firm Referral Source, which CPA Rotation is this cadence for? For all other scenarios this field is ignored.</inlineHelpText>
    <label>Rotation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TargetType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>BW - Week 1 &amp; Week 3</fullName>
            </value>
            <value>
                <fullName>BW - Week 2 &amp; Week 4</fullName>
            </value>
            <value>
                <fullName>Multi-Touch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>