force-app/main/default/objects/Cadence__c/fields/Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Custom_Permission</label>
    <length>25</length>
    <type>Text</type>
</CustomField>