force-app/main/default/objects/Cadence__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tell us more about this Cadence!</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>