force-app/main/default/objects/Cadence__c/fields/EmpsMax__c.field-meta.xml
<CustomField>
    <fullName>EmpsMax__c</fullName>
    <inlineHelpText>Optional for Send To Partner, the maximum number of employees acceptable for this Cadence.</inlineHelpText>
    <label>Emps Max</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>