force-app/main/default/objects/Cadence__c/fields/EmpsMin__c.field-meta.xml
<CustomField>
    <fullName>EmpsMin__c</fullName>
    <inlineHelpText>Optional for Send To Partner, the minimum number of employees needed for this Cadence. If blank, employee count won&apos;t be considered.</inlineHelpText>
    <label>Emps Min</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>