force-app/main/default/objects/Cadence__c/fields/IsClientCadence__c.field-meta.xml
<CustomField>
    <fullName>IsClientCadence__c</fullName>
    <formula>ISPICKVAL(TargetType__c,&quot;Client&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this a client cadence?</inlineHelpText>
    <label>Is Client Cadence?</label>
    <type>Checkbox</type>
</CustomField>