force-app/main/default/objects/Cadence__c/fields/IsProspectCadence__c.field-meta.xml
<CustomField>
    <fullName>IsProspectCadence__c</fullName>
    <formula>OR (ISPICKVAL( TargetType__c , &quot;Prospect&quot;)
   ,ISPICKVAL( TargetType__c , &quot;Inbound Prospect&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this a prospect cadence?</inlineHelpText>
    <label>Is Prospect Cadence?</label>
    <type>Checkbox</type>
</CustomField>