force-app/main/default/objects/Cadence__c/fields/IsThisCloned__c.field-meta.xml
<CustomField>
    <fullName>IsThisCloned__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>On insert of this record, if this contains an ID that is not the ID of this record, then clone the cadence steps from the cadence represented by the ID. Then the ID will be update to this record&apos;s ID so if it&apos;s cloned again it will pull the new steps.</inlineHelpText>
    <label>Is This Cloned?</label>
    <length>18</length>
    <type>Text</type>
</CustomField>