force-app/main/default/objects/Cadence__c/fields/LastActivityDays__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDays__c</fullName>
    <inlineHelpText>If a number is provided here, if any activity is in the specified number of days then it will not be added to this cadence.</inlineHelpText>
    <label>Last Activity Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>