force-app/main/default/objects/Cadence__c/fields/MatchReferringOpp__c.field-meta.xml
<CustomField>
    <fullName>MatchReferringOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the CAR records associated with this Cadence will be able to be matched to Referring Opportunities. Those Referring Opps will be treated as Self Generated when it closes the CAR record.</inlineHelpText>
    <label>Match Referring Opp</label>
    <type>Checkbox</type>
</CustomField>