force-app/main/default/objects/Cadence__c/fields/OnlyUseCustomCloseReasons__c.field-meta.xml
<CustomField>
    <fullName>OnlyUseCustomCloseReasons__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we only use the close reasons defined for this cadence? If the close reasons field is blank it uses the default close reasons.</inlineHelpText>
    <label>Only Use Custom Close Reasons</label>
    <type>Checkbox</type>
</CustomField>