force-app/main/default/objects/Cadence__c/fields/OppMatchesCarCloseReason__c.field-meta.xml
<CustomField>
    <fullName>OppMatchesCarCloseReason__c</fullName>
    <formula>IF ( MatchReferringOpp__c == True, &quot;Referral Created&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If there&apos;s a custom close reason for the CAR when the Opportunity matches it using this Cadence</inlineHelpText>
    <label>Opp Matches Car Close Reason</label>
    <type>Text</type>
</CustomField>