force-app/main/default/objects/Cadence__c/fields/Outcome_Required__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>when this box is selected a close reason (outcome) will be required to be removed from the cadence</description>
    <inlineHelpText>when this box is selected a close reason (outcome) will be required to be removed from the cadence</inlineHelpText>
    <label>Outcome Required</label>
    <type>Checkbox</type>
</CustomField>