force-app/main/default/objects/Cadence__c/fields/OverrideOtherCARs__c.field-meta.xml
<CustomField>
    <fullName>OverrideOtherCARs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is checked, if there is another CAR of the same cadence/target type, it will close that one to allow the new CAR to be created.</description>
    <label>Override Other CARs</label>
    <type>Checkbox</type>
</CustomField>