force-app/main/default/objects/Cadence__c/fields/OwnedByQueue__c.field-meta.xml
<CustomField>
    <fullName>OwnedByQueue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NSS Specific field used to determine whether rep can take ownership of a touchpoint</description>
    <label>Always Owned by Queue?</label>
    <type>Checkbox</type>
</CustomField>