force-app/main/default/objects/Cadence__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>If there are multiple open cars for one record, only the one attached to the cadence with the highest number priority will display. Priority of 20 will beat a priority of 10.</inlineHelpText>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>