force-app/main/default/objects/Cadence__c/fields/ReferralSourceBusinessType2__c.field-meta.xml
<CustomField>
    <fullName>ReferralSourceBusinessType2__c</fullName>
    <inlineHelpText>If this is an Referral Source cadence, the type must be selected</inlineHelpText>
    <label>Referral Source Business Type2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>TargetType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Firm</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Broker Dealer</fullName>
            </value>
            <value>
                <fullName>Broker Dealer Branch</fullName>
            </value>
            <value>
                <fullName>Business Consultant</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Full Service Agency</fullName>
            </value>
            <value>
                <fullName>Health Insurance Broker</fullName>
            </value>
            <value>
                <fullName>Insurance Broker</fullName>
            </value>
            <value>
                <fullName>Insurance Carrier</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>MSP Partner</fullName>
            </value>
            <value>
                <fullName>National Account</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>P&amp;C Broker</fullName>
            </value>
            <value>
                <fullName>Paychex Co</fullName>
            </value>
            <value>
                <fullName>PEO Broker</fullName>
            </value>
            <value>
                <fullName>Private Equity Firm</fullName>
            </value>
            <value>
                <fullName>Strategic Account</fullName>
            </value>
            <value>
                <fullName>Strategic Accountant Firm</fullName>
            </value>
            <value>
                <fullName>Trusted Advisor</fullName>
            </value>
            <value>
                <fullName>Payroll Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>