force-app/main/default/objects/Cadence__c/fields/ReferralSourceCadence__c.field-meta.xml
<CustomField>
    <fullName>ReferralSourceCadence__c</fullName>
    <formula>OR( ISPICKVAL( TargetType__c , &quot;Ongoing Referral Source&quot;) 
   ,ISPICKVAL(TargetType__c, &quot;Referral Source&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this cadence for a referral source?</inlineHelpText>
    <label>Is Referral Source Cadence</label>
    <type>Checkbox</type>
</CustomField>