force-app/main/default/objects/Cadence__c/fields/ReferralType__c.field-meta.xml
<CustomField>
    <fullName>ReferralType__c</fullName>
    <inlineHelpText>For a CPA firm, which referral type(s) is this Cadence associated with?</inlineHelpText>
    <label>Referral Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>TargetType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>