force-app/main/default/objects/Cadence__c/fields/RepAdd__c.field-meta.xml
<CustomField>
    <fullName>RepAdd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rep can add prospect to cadence?</label>
    <type>Checkbox</type>
</CustomField>