force-app/main/default/objects/Cadence__c/fields/SendToPartner__c.field-meta.xml
<CustomField>
    <fullName>SendToPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this Cadence available for the Send to Partner functionality? Send to Partner Queue is required if this is checked.</inlineHelpText>
    <label>Send To Partner?</label>
    <type>Checkbox</type>
</CustomField>