force-app/main/default/objects/Cadence__c/fields/SendToPartnerQueue__c.field-meta.xml
<CustomField>
    <fullName>SendToPartnerQueue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the queue the records will default to if they meet the criteria for this Cadence in the Send To Partner functionality.</inlineHelpText>
    <label>Send To Partner Queue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>