force-app/main/default/objects/Cadence__c/fields/SendToPartnerQueueId__c.field-meta.xml
<CustomField>
    <fullName>SendToPartnerQueueId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The ID of the queue for the Send To Partner functionality.</inlineHelpText>
    <label>Send To Partner QueueId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>