force-app/main/default/objects/Cadence__c/fields/TargetType__c.field-meta.xml
<CustomField>
    <fullName>TargetType__c</fullName>
    <inlineHelpText>What is the target audience of this Cadence? This is used for knowing if multiple cadences are allowed on a lead/account (only 1 per Target Type).</inlineHelpText>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Inbound Prospect</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Referral Source</fullName>
            </value>
            <value>
                <fullName>Ongoing Referral Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>