force-app/main/default/objects/Cadence__c/fields/WorkableCurrentClient__c.field-meta.xml
<CustomField>
    <fullName>WorkableCurrentClient__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this if the NSS Workable-Current Client field on the Account needs to be true for this Cadence to match for Send To Partner</inlineHelpText>
    <label>Workable-Current Client</label>
    <type>Checkbox</type>
</CustomField>