force-app/main/default/objects/Cadence__c/fields/WorkableHRS__c.field-meta.xml
<CustomField>
    <fullName>WorkableHRS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this if the NSS Workable-HRS field on the Account or Lead needs to be true for this Cadence to match for Send To Partner</inlineHelpText>
    <label>Workable-HRS</label>
    <type>Checkbox</type>
</CustomField>