force-app/main/default/objects/Cadence__c/fields/WorkablePayroll__c.field-meta.xml
<CustomField>
    <fullName>WorkablePayroll__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this if the NSS Workable-Payroll field on the Account or Lead needs to be true for this Cadence to match for Send To Partner</inlineHelpText>
    <label>Workable-Payroll</label>
    <type>Checkbox</type>
</CustomField>