force-app/main/default/objects/Cadence__c/validationRules/CadenceEmpsCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CadenceEmpsCheck</fullName>
    <active>true</active>
    <description>For an employee range, both Emps Min and Emps Max need a value.</description>
    <errorConditionFormula>OR (AND( NOT(ISNULL( EmpsMin__c )), ISNULL(EmpsMax__c))
  ,AND( ISNULL( EmpsMin__c ), NOT(ISNULL(EmpsMax__c))))</errorConditionFormula>
    <errorDisplayField>EmpsMin__c</errorDisplayField>
    <errorMessage>For an employee range, both Emps Min and Emps Max need a value.</errorMessage>
</ValidationRule>