force-app/main/default/objects/Cadence__c/validationRules/QueueRequiredWithSendToPartner.validationRule-meta.xml
<ValidationRule>
    <fullName>QueueRequiredWithSendToPartner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(SendToPartner__c = true,  ISBLANK( SendToPartnerQueue__c ) )</errorConditionFormula>
    <errorDisplayField>SendToPartnerQueue__c</errorDisplayField>
    <errorMessage>Send To Partner Queue has to have a valid queue for Send To Partner.</errorMessage>
</ValidationRule>