force-app/main/default/objects/Cadence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OwnerChangeAction__c</columns>
    <columns>Sales_Campaign_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Sales_Org__c</columns>
    <columns>Cadence_Type__c</columns>
    <columns>SetOwnerHoldout__c</columns>
    <columns>Active__c</columns>
    <columns>RepAdd__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OnlyUseCustomCloseReasons__c</columns>
    <columns>CloseReasons__c</columns>
    <columns>Start_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Sales_Play__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cadence_Type__c</field>
        <operation>equals</operation>
        <value>SMB INB</value>
    </filters>
    <label>All</label>
</ListView>