force-app/main/default/objects/Cadence__c/listViews/All_Cadences_w_Batch_Email.listView-meta.xml
<ListView>
    <fullName>All_Cadences_w_Batch_Email</fullName>
    <columns>NAME</columns>
    <columns>Cadence_Type__c</columns>
    <columns>Auto_Skip_Steps__c</columns>
    <columns>OwnerChangeAction__c</columns>
    <columns>SetOwnerHoldout__c</columns>
    <columns>RepAdd__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CloseReasons__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>DaysUntilExpiration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Cadence_Type__c</field>
        <operation>equals</operation>
        <value>401k,ASO,HNBF,PEO,TAA,CSSR,MS,SMB INB,MSP</value>
    </filters>
    <label>All Cadences w/Batch Email</label>
    <sharedTo>
        <group>Sales_Enablement</group>
    </sharedTo>
</ListView>