force-app/main/default/objects/Cadence__c/listViews/Cadence_Type_View.listView-meta.xml
<ListView>
    <fullName>Cadence_Type_View</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Cadence_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>TargetType__c</columns>
    <columns>ReferralType__c</columns>
    <columns>Sales_Campaign_Name__c</columns>
    <columns>CPARotation__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>RepAdd__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Cadence_Type__c</field>
        <operation>equals</operation>
        <value>HNBF</value>
    </filters>
    <label>Cadence Type View</label>
</ListView>