force-app/main/default/objects/Cadence__c/listViews/HNBF_Active_Cadences.listView-meta.xml
<ListView>
    <fullName>HNBF_Active_Cadences</fullName>
    <columns>NAME</columns>
    <columns>OwnerChangeAction__c</columns>
    <columns>Sales_Campaign_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Sales_Org__c</columns>
    <columns>Cadence_Type__c</columns>
    <columns>SetOwnerHoldout__c</columns>
    <columns>Active__c</columns>
    <columns>RepAdd__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OnlyUseCustomCloseReasons__c</columns>
    <columns>CloseReasons__c</columns>
    <columns>Start_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>IsThisCloned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>HNBF</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>HNBF Active Cadences</label>
</ListView>