force-app/main/default/objects/Cadence__c/listViews/MMS_Active_Cadences.listView-meta.xml
<ListView>
    <fullName>MMS_Active_Cadences</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>RepAdd__c</columns>
    <columns>TargetType__c</columns>
    <columns>Auto_Skip_Steps__c</columns>
    <columns>Sales_Campaign_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>DaysToCheckForOppsAfterClose__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cadence_Type__c</field>
        <operation>equals</operation>
        <value>MMS</value>
    </filters>
    <label>MMS Active Cadences</label>
</ListView>