force-app/main/default/objects/Cadence__c/listViews/New_Business.listView-meta.xml
<ListView>
    <fullName>New_Business</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Cadence_Type__c</columns>
    <columns>CloseReasons__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Campaign_Name__c</columns>
    <columns>Description__c</columns>
    <columns>DaysToCheckForOppsAfterClose__c</columns>
    <columns>RepAdd__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cadence_Type__c</field>
        <operation>equals</operation>
        <value>SMB New Business</value>
    </filters>
    <label>New Business Cadences</label>
</ListView>