force-app/main/default/objects/Cadence__c/listViews/New_Business_Cadences.listView-meta.xml
<ListView>
    <fullName>New_Business_Cadences</fullName>
    <columns>NAME</columns>
    <columns>OwnerChangeAction__c</columns>
    <columns>Sales_Campaign_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Sales_Org__c</columns>
    <columns>Cadence_Type__c</columns>
    <columns>SetOwnerHoldout__c</columns>
    <columns>Active__c</columns>
    <columns>RepAdd__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OnlyUseCustomCloseReasons__c</columns>
    <columns>CloseReasons__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cadence_Type__c</field>
        <operation>equals</operation>
        <value>SMB New Business</value>
    </filters>
    <label>New Business Cadences</label>
</ListView>