force-app/main/default/objects/Cadence__c/listViews/NSS_SMB_Inbound.listView-meta.xml
<ListView>
    <fullName>NSS_SMB_Inbound</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Cadence_Type__c</columns>
    <columns>OwnedByQueue__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OwnerChangeAction__c</columns>
    <columns>StartsWithTAL__c</columns>
    <columns>DaysUntilExpiration__c</columns>
    <columns>RepAdd__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CadenceTypeGroup__c</field>
        <operation>equals</operation>
        <value>Sales-All Inbound</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>NSS/SMB Inbound</label>
</ListView>