force-app/main/default/objects/Cadence__c/listViews/Ongoing.listView-meta.xml
<ListView>
    <fullName>Ongoing</fullName>
    <columns>NAME</columns>
    <columns>ReferralSourceBusinessType2__c</columns>
    <columns>CPARotation__c</columns>
    <columns>ReferralType__c</columns>
    <columns>CloseReasons__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Sales_Campaign_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OngoingCadence__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Ongoing</label>
</ListView>