force-app/main/default/objects/Cadence__c/listViews/Retirement_Active_Cadences.listView-meta.xml
<ListView>
    <fullName>Retirement_Active_Cadences</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>OwnerChangeAction__c</columns>
    <columns>TargetType__c</columns>
    <columns>Auto_Skip_Steps__c</columns>
    <columns>Sales_Campaign_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CloseReasons__c</columns>
    <columns>IsThisCloned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cadence_Type__c</field>
        <operation>equals</operation>
        <value>401k</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Retirement Active Cadences</label>
</ListView>