force-app/main/default/objects/Cadence__c/listViews/Send_to_Partner_Cadences.listView-meta.xml
<ListView>
    <fullName>Send_to_Partner_Cadences</fullName>
    <columns>NAME</columns>
    <columns>Cadence_Type__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SendToPartnerQueue__c</columns>
    <columns>TargetType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SendToPartner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Send to Partner Cadences</label>
</ListView>