force-app/main/default/objects/Cadence__c/listViews/SMB_Channel_Cadences.listView-meta.xml
<ListView>
    <fullName>SMB_Channel_Cadences</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>TargetType__c</columns>
    <columns>ReferralSourceBusinessType__c</columns>
    <columns>Auto_Skip_Steps__c</columns>
    <columns>Sales_Campaign_Name__c</columns>
    <columns>End_Date__c</columns>
    <columns>Priority__c</columns>
    <columns>CloseReasons__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Cadence_Type__c</field>
        <operation>equals</operation>
        <value>SMB</value>
    </filters>
    <label>SMB Active Cadences</label>
</ListView>