force-app/main/default/objects/Cadence__c/listViews/Virtual_Active_Cadences.listView-meta.xml
<ListView>
    <fullName>Virtual_Active_Cadences</fullName>
    <columns>NAME</columns>
    <columns>Cadence_Type__c</columns>
    <columns>Active__c</columns>
    <columns>RepAdd__c</columns>
    <columns>TargetType__c</columns>
    <columns>Auto_Skip_Steps__c</columns>
    <columns>Sales_Campaign_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cadence_Type__c</field>
        <operation>equals</operation>
        <value>Oasis SDR,MMS SDR,Inbound-Oasis,Outbound-Oasis,TAA,MS,SMB INB</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Virtual Active Cadences</label>
</ListView>